[gd_scene load_steps=37 format=3 uid="uid://bnfr8gek24m47"]

[ext_resource type="Script" uid="uid://bhgb4virmkji8" path="res://entities/game/memory_game/scripts/MemoryGame.gd" id="1_13jq5"]
[ext_resource type="Resource" uid="uid://cnl5uxkf36ely" path="res://shared/resources/translations/assets/TurnEndBannerMessage.tres" id="2_fspeh"]
[ext_resource type="Resource" uid="uid://dg6a4ijl3noge" path="res://shared/resources/translations/assets/TurnEndBannerMessageNoAutoComplete.tres" id="3_a3528"]
[ext_resource type="PackedScene" uid="uid://ubmqrubcq2a2" path="res://entities/game/card_template/scenes/CardTemplate.tscn" id="3_ihyl6"]
[ext_resource type="Script" uid="uid://6o7nskqm6kd0" path="res://entities/game/memory_game/scripts/CameraController.gd" id="4_4ihyn"]
[ext_resource type="PackedScene" uid="uid://csamt2tu6hlpo" path="res://entities/game/finish_game/scenes/FinishGame.tscn" id="4_6f670"]
[ext_resource type="Script" uid="uid://bxjrl2ikqn4tk" path="res://entities/game/memory_game/scripts/PlayerManager.gd" id="4_n744t"]
[ext_resource type="AudioStream" uid="uid://dq3rmjoitwi1a" path="res://assets/audio/effect/confirmation_001.ogg" id="6_a3528"]
[ext_resource type="PackedScene" uid="uid://d0vijthhc3d38" path="res://entities/game/players_overlay/scenes/PlayersOverlay.tscn" id="7_a7rnv"]
[ext_resource type="Script" uid="uid://bglvkbo4aydsy" path="res://entities/game/memory_game/scripts/Background.gd" id="7_kxmqb"]
[ext_resource type="Script" uid="uid://bxrsfyvew4ysu" path="res://entities/game/memory_game/scripts/PlayerInput.gd" id="9_86hnd"]
[ext_resource type="PackedScene" uid="uid://cluwm03j8e11p" path="res://entities/game/game_pause_menu/scenes/GamePauseMenu.tscn" id="12_dfx06"]
[ext_resource type="Script" uid="uid://bsilbayat31i4" path="res://entities/game/tutorial_window/resources/TutorialInformation.gd" id="14_65xsg"]
[ext_resource type="Script" uid="uid://chfatpxf8ucxr" path="res://shared/entities/clickable_button/ClickableButton.gd" id="15_2f3xl"]
[ext_resource type="Resource" uid="uid://dmh064uu1p16b" path="res://entities/game/tutorial_window/assets/PlayerTurnTutorial.tres" id="15_s0u1d"]
[ext_resource type="Script" uid="uid://c3hyh8ifpeuxg" path="res://entities/game/memory_game/scripts/GameAI.gd" id="15_u3ner"]
[ext_resource type="Script" uid="uid://bc2d1ad7vpjfc" path="res://shared/entities/clickable_button/resources/behaviors/TouchButtonBehavior.gd" id="16_78e34"]
[ext_resource type="Resource" uid="uid://s7d15d0nkymx" path="res://entities/game/tutorial_window/assets/FirstCardTurnedTutorial.tres" id="16_askkq"]
[ext_resource type="Resource" uid="uid://bo13l4s4ffjrn" path="res://entities/game/tutorial_window/assets/PlayerFirstRoundEnd.tres" id="17_evx0k"]
[ext_resource type="Script" uid="uid://cgdnmg4wop2a6" path="res://shared/entities/clickable_button/resources/actions/TriggerInputAction.gd" id="17_tgl34"]
[ext_resource type="Resource" uid="uid://da7g2acm7xuw1" path="res://entities/game/tutorial_window/assets/PlayerFirstMatchFound.tres" id="18_evx0k"]
[ext_resource type="Texture2D" uid="uid://b6xl5vukmvlku" path="res://assets/icons/AddIcon.tres" id="18_pqxyo"]
[ext_resource type="Script" uid="uid://xiyurpjwgjnn" path="res://entities/game/memory_game/scripts/GameCardGrid.gd" id="19_ploi3"]
[ext_resource type="Texture2D" uid="uid://bjgikbiemswhu" path="res://assets/icons/MinusIcon.tres" id="20_ef4f6"]
[ext_resource type="Script" uid="uid://6fa28680utd5" path="res://shared/entities/popup_manager/scripts/PopupManager.gd" id="21_dv4ao"]
[ext_resource type="Script" uid="uid://boch5lqi4lvc7" path="res://entities/game/memory_game/scripts/Tutorial.gd" id="22_0x2pf"]
[ext_resource type="PackedScene" uid="uid://d15qeu4s4bgjk" path="res://entities/game/tutorial_window/scenes/TutorialWindow.tscn" id="22_ubsrg"]
[ext_resource type="Texture2D" uid="uid://vk4fpd7xo01j" path="res://assets/sprites/Axuree/wood_medium.png" id="23_a3528"]
[ext_resource type="Script" uid="uid://btm576yjkyt4j" path="res://entities/game/memory_game/scripts/CardSpawner.gd" id="26_a3528"]
[ext_resource type="Script" uid="uid://drr3p4wba2ys3" path="res://entities/game/memory_game/scripts/NetworkHandler.gd" id="29_kihnp"]

[sub_resource type="Resource" id="Resource_kihnp"]
script = ExtResource("16_78e34")
metadata/_custom_type_script = "uid://bc2d1ad7vpjfc"

[sub_resource type="Resource" id="Resource_086p8"]
script = ExtResource("17_tgl34")
button_action_name = "back"
metadata/_custom_type_script = "uid://cgdnmg4wop2a6"

[sub_resource type="Resource" id="Resource_5dmxa"]
script = ExtResource("16_78e34")
metadata/_custom_type_script = "uid://bc2d1ad7vpjfc"

[sub_resource type="Resource" id="Resource_1wouk"]
script = ExtResource("17_tgl34")
button_action_name = "zoom_out"
metadata/_custom_type_script = "uid://cgdnmg4wop2a6"

[sub_resource type="Resource" id="Resource_78e34"]
script = ExtResource("16_78e34")
metadata/_custom_type_script = "uid://bc2d1ad7vpjfc"

[sub_resource type="Resource" id="Resource_tgl34"]
script = ExtResource("17_tgl34")
button_action_name = "zoom_in"
metadata/_custom_type_script = "uid://cgdnmg4wop2a6"

[node name="MemoryGame" type="Node2D" node_paths=PackedStringArray("game_nodes_to_show", "card_target_node")]
process_mode = 1
script = ExtResource("1_13jq5")
round_end_message = ExtResource("2_fspeh")
round_end_message_no_auto_complete = ExtResource("3_a3528")
finished_game_template = ExtResource("4_6f670")
game_menu_template = ExtResource("12_dfx06")
game_nodes_to_show = [NodePath("CanvasLayer"), NodePath("Background")]
card_target_node = NodePath("Cards")
sound_effect = ExtResource("6_a3528")

[node name="Players" type="Node" parent="."]
unique_name_in_owner = true
script = ExtResource("4_n744t")

[node name="AI" type="Node" parent="." node_paths=PackedStringArray("cards_node", "players")]
script = ExtResource("15_u3ner")
cards_node = NodePath("../Cards")
players = NodePath("../Players")
min_wait_milliseconds = 750.0

[node name="PlayerInput" type="Node" parent="."]
script = ExtResource("9_86hnd")

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(600, 0)
script = ExtResource("4_4ihyn")

[node name="CanvasLayer" type="CanvasLayer" parent="."]
process_mode = 3

[node name="MenuButton" type="Button" parent="CanvasLayer"]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -35.5
offset_right = 35.5
offset_bottom = 36.0
grow_horizontal = 2
text = "PAUSE_MENU"
script = ExtResource("15_2f3xl")
can_request_debug_view = true
active = 4
button_behavior = SubResource("Resource_kihnp")
pressed_action = SubResource("Resource_086p8")

[node name="PlayersOverlay" parent="CanvasLayer" instance=ExtResource("7_a7rnv")]
offset_right = 203.0
offset_bottom = 179.0
size_flags_horizontal = 0
size_flags_vertical = 0
theme_override_constants/margin_left = 25
theme_override_constants/margin_top = 25

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer"]
anchors_preset = 11
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 0
grow_vertical = 2

[node name="ZoomIn" type="Button" parent="CanvasLayer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 10
icon = ExtResource("18_pqxyo")
script = ExtResource("15_2f3xl")
can_request_debug_view = true
active = 4
button_behavior = SubResource("Resource_5dmxa")
pressed_action = SubResource("Resource_1wouk")

[node name="ZoomOut" type="Button" parent="CanvasLayer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 2
icon = ExtResource("20_ef4f6")
script = ExtResource("15_2f3xl")
can_request_debug_view = true
active = 4
button_behavior = SubResource("Resource_78e34")
pressed_action = SubResource("Resource_tgl34")

[node name="PopupManager" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("21_dv4ao")

[node name="Tutorial" type="Node" parent="CanvasLayer"]
script = ExtResource("22_0x2pf")
tutorial_window_scene = ExtResource("22_ubsrg")
available_tutorials = Array[ExtResource("14_65xsg")]([ExtResource("15_s0u1d"), ExtResource("16_askkq"), ExtResource("17_evx0k"), ExtResource("18_evx0k")])

[node name="Background" type="Node2D" parent="." node_paths=PackedStringArray("camera_node")]
visible = false
z_index = -20
script = ExtResource("7_kxmqb")
background_texture = ExtResource("23_a3528")
camera_node = NodePath("../Camera2D")

[node name="Cards" type="Node2D" parent="."]
script = ExtResource("19_ploi3")

[node name="CardSpawner" type="Node" parent="Cards"]
script = ExtResource("26_a3528")
card_template = ExtResource("3_ihyl6")
metadata/_custom_type_script = "uid://btm576yjkyt4j"

[node name="CardTemplateGhost" parent="." groups=["game_initialize_scene"] instance=ExtResource("3_ihyl6")]
position = Vector2(-11367, -8587)
is_ghost = true

[node name="NetworkHandler" type="Node" parent="." node_paths=PackedStringArray("player_node")]
script = ExtResource("29_kihnp")
finished_game_template = ExtResource("4_6f670")
player_node = NodePath("../Players")

[connection signal="card_loading_done" from="." to="Camera2D" method="loading_done"]
[connection signal="card_loading_done" from="." to="CanvasLayer/MenuButton" method="show_button"]
[connection signal="card_loading_done" from="." to="CanvasLayer/PlayersOverlay" method="show"]
[connection signal="card_loading_done" from="." to="CanvasLayer/VBoxContainer/ZoomIn" method="show_button"]
[connection signal="card_loading_done" from="." to="CanvasLayer/VBoxContainer/ZoomOut" method="show_button"]
[connection signal="card_loading_done" from="." to="Cards" method="card_loading_done"]
[connection signal="card_loading_done" from="." to="Cards" method="announce_card_field"]
[connection signal="card_triggered" from="." to="AI" method="card_was_triggered"]
[connection signal="card_triggered" from="." to="NetworkHandler" method="card_clicked"]
[connection signal="close_last_message_box" from="." to="CanvasLayer/PopupManager" method="force_close_popup_with_id"]
[connection signal="game_paused" from="." to="PlayerInput" method="game_paused"]
[connection signal="game_paused" from="." to="Camera2D" method="game_paused"]
[connection signal="game_state_changed" from="." to="Players" method="game_state_changed"]
[connection signal="game_state_changed" from="." to="AI" method="game_state_changed"]
[connection signal="game_state_changed" from="." to="PlayerInput" method="game_state_changed"]
[connection signal="game_state_changed" from="." to="CanvasLayer/PlayersOverlay" method="game_state_changed"]
[connection signal="game_state_changed" from="." to="Cards" method="game_state_changed"]
[connection signal="game_state_changed" from="." to="NetworkHandler" method="game_state_changed"]
[connection signal="identical_cards" from="." to="AI" method="card_was_identically"]
[connection signal="identical_cards" from="." to="NetworkHandler" method="matching_pair"]
[connection signal="load_game" from="." to="Cards/CardSpawner" method="place_cards_from_deck"]
[connection signal="player_scored" from="." to="Players" method="player_scored"]
[connection signal="player_scored" from="." to="NetworkHandler" method="player_scored"]
[connection signal="remove_card" from="." to="Cards" method="remove_card_from_board"]
[connection signal="request_popup" from="." to="CanvasLayer/PopupManager" method="add_and_show_popup"]
[connection signal="trigger_tutorial" from="." to="CanvasLayer/Tutorial" method="trigger_tutorial"]
[connection signal="player_added" from="Players" to="CanvasLayer/PlayersOverlay" method="add_player"]
[connection signal="player_changed" from="Players" to="CanvasLayer/PlayersOverlay" method="player_changed"]
[connection signal="player_resource_changed" from="Players" to="AI" method="player_changed"]
[connection signal="player_resource_changed" from="Players" to="PlayerInput" method="player_changed"]
[connection signal="player_resource_changed" from="Players" to="Camera2D" method="player_changed"]
[connection signal="player_resource_changed" from="Players" to="Cards" method="player_changed"]
[connection signal="player_resource_changed" from="Players" to="NetworkHandler" method="player_changed"]
[connection signal="player_score_changed" from="Players" to="CanvasLayer/PlayersOverlay" method="player_scored"]
[connection signal="card_movement" from="PlayerInput" to="Cards" method="parse_movement"]
[connection signal="confirm_current_card" from="PlayerInput" to="Cards" method="confirm_current_card"]
[connection signal="end_current_round" from="PlayerInput" to="." method="end_round_now"]
[connection signal="game_menu_requested" from="PlayerInput" to="." method="show_game_menu"]
[connection signal="touch_used" from="Camera2D" to="Cards" method="disable_card_effects"]
[connection signal="continue_game" from="CanvasLayer/PopupManager" to="." method="unpause_game"]
[connection signal="pause_game" from="CanvasLayer/PopupManager" to="." method="pause_game"]
[connection signal="tutorial_requested" from="CanvasLayer/Tutorial" to="CanvasLayer/PopupManager" method="add_and_show_popup"]
[connection signal="announce_field_size" from="Cards/CardSpawner" to="Camera2D" method="adjust_zoom_and_position_to_play_area"]
[connection signal="card_loading_done" from="Cards/CardSpawner" to="." method="all_cards_placed"]
[connection signal="card_placed" from="Cards/CardSpawner" to="." method="card_was_placed"]
[connection signal="card_was_clicked" from="NetworkHandler" to="Cards" method="trigger_card_at_position"]
[connection signal="game_has_been_finished" from="NetworkHandler" to="CanvasLayer/PlayersOverlay" method="game_ended"]
[connection signal="game_state_has_changed" from="NetworkHandler" to="PlayerInput" method="game_state_changed"]
[connection signal="game_state_has_changed" from="NetworkHandler" to="Cards" method="game_state_changed"]
[connection signal="player_has_changed" from="NetworkHandler" to="Players" method="set_player_by_id"]
[connection signal="player_has_scored" from="NetworkHandler" to="Players" method="set_player_score"]
[connection signal="remove_card" from="NetworkHandler" to="Cards" method="remove_card_from_board"]
[connection signal="request_popup" from="NetworkHandler" to="CanvasLayer/PopupManager" method="add_and_show_popup"]
